src/app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));
@custom-variant hover-hover {
  @media (hover: hover) {
    @slot;
  }
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-primary-compliment: var(--primary-compliment);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-border: var(--border);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-ring: var(--ring);

  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-success: var(--success);
  --color-success-foreground: var(--success-foreground);
  --color-cyan: var(--cyan);
  --color-cyan-foreground: var(--cyan-foreground);

  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --color-input: var(--input);

  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --text-xxs: 0.625rem;
  --text-h1: var(--text-h1);
  --text-h1--font-weight: var(--text-h1--font-weight);
  --text-h2: var(--text-h2);
  --text-h2--font-weight: var(--text-h2--font-weight);
  --text-h3: var(--text-h3);
  --text-h3--font-weight: var(--text-h3--font-weight);

  --text-body-4: var(--text-body-4);
  --text-body-4--font-weight: var(--text-body-4--font-weight);

  --font-lato: var(--font-lato);
  --font-syncopate: var(--font-syncopate);

  /* Only enable variables when needed */
  /* 
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  */
}

:root {
  --background: oklch(from #121212 l c h);
  --foreground: oklch(from var(--color-white) l c h);
  --primary: oklch(60.795% 0.2218 284.387);
  --primary-foreground: var(--color-white);
  --primary-compliment: oklch(from #ffafa4 l c h);

  --secondary: oklch(from #333333 l c h);
  --secondary-foreground: var(--color-white);

  --muted: oklch(from #1e1e1e l c h);
  --muted-foreground: oklch(from #a3a3a4 l c h);

  --border: oklch(from #141818 l c h);
  --ring: var(--border);
  --input: var(--secondary);

  --accent: color-mix(var(--primary), var(--background) 70%);
  --accent-foreground: var(--primary-foreground);

  --destructive: oklch(60% 0.2 25);
  --destructive-foreground: var(--color-white);
  --success: oklch(60% 0.2 140);
  --success-foreground: var(--color-white);

  --cyan: oklch(from #00c0e8 l c h);
  --cyan-foreground: var(--color-white);

  --card: var(--muted);
  --card-foreground: var(--muted-foreground);
  --popover: var(--background);
  --popover-foreground: var(--foreground);

  --sidebar: var(--muted);
  --sidebar-foreground: var(--foreground);
  --sidebar-primary: var(--primary);
  --sidebar-primary-foreground: var(--primary-foreground);
  --sidebar-accent: var(--border);
  --sidebar-accent-foreground: var(--color-white);
  --sidebar-border: var(--border);
  --sidebar-ring: var(--ring);

  --colorful-gradient: linear-gradient(
    261.15deg,
    var(--primary-compliment) -29.14%,
    var(--primary) 99.41%
  );

  --radius: 0.625rem;

  /* Font and text */
  --text-xxs: 0.625rem;
  --text-h1: var(--text-2xl);
  --text-h1--font-weight: var(--font-weight-semibold);
  --text-h2: var(--text-xl);
  --text-h2--font-weight: var(--font-weight-semibold);
  --text-h3: var(--text-lg);
  --text-h3--font-weight: var(--font-weight-semibold);
  --text-body-4: var(--text-xs);
  --text-body-4--font-weight: var(--font-weight-normal);

  @media (max-width: 768px) {
    --text-h1: var(--text-xl);
    --text-h2: var(--text-lg);
    --text-body-4: var(--text-xxs);
  }

  /* 
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08); */
}

/* No dark mode currently */
/* .dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --input: oklch(1 0 0 / 15%);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
} */

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  :is(button, [role="button"], [role="menuitem"]):not(:disabled) {
    @apply cursor-pointer;
  }
}

@layer components {
  .link,
  [data-slot="link"] {
    @apply text-primary underline decoration-primary/30 underline-offset-4 hover:decoration-primary;
  }
  /* Animated border glow effect */
  .animate-border-glow {
    @apply relative overflow-hidden z-0;
  }

  .animate-border-glow::before {
    @apply absolute w-16 content-[''] pointer-events-none h-full left-0 top-0 bg-linear-to-r from-transparent via-white to-transparent -z-2;

    offset-path: border-box;
    offset-anchor: 100% 50%; /* Front of the beam leads */
    animation: border-beam 3s linear infinite;
  }

  [data-slot="dashboard-slot"] {
    @apply relative flex min-h-screen w-full flex-col gap-6 p-3 md:p-6;
  }

  @keyframes border-beam {
    0% {
      opacity: 0.2;
    }
    50% {
      width: 20%;
      opacity: 1;
    }
    100% {
      offset-distance: 100%;
      opacity: 0.2;
    }
  }

  .animate-border-glow::after {
    @apply absolute inset-0.5 -z-1 content-[''] bg-inherit rounded-[inherit];
  }

  .gsap-reveal {
    visibility: hidden;
  }
}

